@startuml CompositeUniformity_diagram

title "Composite (uniformity)"

class Client {
}

interface Component {
    + {abstract} operation()
    + add()
    + remove()
    + getChild() : Component
}

Client -> Component

class Leaf {
    + operation()
}

Component <|-- Leaf

class Composite {
    + operation()
    + add()
    + remove()
    + getChild() : Component
}

Component <|-- Composite
Component <-[hidden]- Composite
Component "0..* " --o Composite

@enduml
